7060842: UseNUMA crash with UseHugreTLBFS running SPECjvm2008

Use mmap() instead of madvise(MADV_DONTNEED) to uncommit pages

Reviewed-by: ysr